# can-be-useful

./: .gitignore  README.md
.github/: deploy.sh  projects.txt
arduino/: README.md
arduino-graphics-test/: arduino-graphics-test.ino
asm-os-tutorial/: Makefile  README.md
astro-blog-website/: README.md
astro-movies-display/: .gitignore
astro-redirector/: README.md  astro.config.mjs  package-lock.json  package.json
auto-api-npm/: README.md  index.js
bash-ai-to-svg/: README.md  ai_to_svg.sh
bash-bad-crawler/: README.md  bad_crawler.sh  extract-blockquote.sh
bash-display-byte/: README.md  run.sh
bash-ffmpeg-rename/: README.md  ffmpeg-rename.sh
bash-get-list-crates/: get_list_crates.sh
bash-git-history/: README.md  change.sh
bash-http-server/: README.md  bash_server.sh
bash-motion-extraction/: README.md
bash-move-repo-with-history/: README.md  move-repo.sh
bash-resize-square-picture/: README.md  resize.sh
bash-webhook/: README.md  webhook.sh
bash-website-checker/: .gitignore  LICENSE  README.md  main.sh
c-iot/: README.md
c-lang-print-byte/: README.md  printByte.c
c-lang-test-malloc/: README.md  test_malloc.c
c-lang-web/: index.c
c-no-heap/: Makefile  README.md  main.c
c-strcat/: .gitignore  README.md  v1.c  v2.c
c-subprocess/: main.c
cdn/: README.md  githubExplorer.js
cobol-fileread/: README.md
cobol-helloworld/: README.md
cpp-lang-dumb-parser/: README.md
cpp-multi-sums/: .gitignore  README.md  (+1 more)
rust-pdf_to_text/: .gitignore  Cargo.toml  README.md  build.sh  index.html
rust-pdf_to_text/src/: lib.rs  main.rs  wasm.rs
(+402 files in other folders)
